css/style.css
/* ... */
.features-list{
	margin-top:2em;
}
.content-middle{
	padding:12% 0;
	background:#d7dedc url("../images/banner-pic.png") no-repeat center right;
	background-size: 100% 100%;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	background-position: center;
}
.download-desc{
	width:52%;
}
.content-middle h2 {
	color:#FFF;
	font-size: 3.2em;
	margin-bottom:1%;
	font-weight: bold;
   -webkit-text-stroke: 1px;
   line-height:1.3em;
   text-transform:uppercase;
}
.content-middle h2 span{
	color:#f55150;
}
.content-middle p {
	color:#585858;
	font-size:24px;
	font-weight: 100;
	line-height: 1.6em;
	padding:10px 0;
	width:60%;
}
.download-button{
	margin-top:3em;
}
img.screen {
    height: 500px;
}
.download-button a{
	display:inline-block;
	padding:12px 25px;
	background:#d9332d;
	font-size:15px;
	color:#FFF;
	font-weight:600;
	text-transform:uppercase;
	border-radius:2em;
	-webkit-border-radius:2em;
	-moz-border-radius:2em;
	-o-border-radius:2em;	
	-webkit-transition: all 0.3s ease-out;
	-moz-transition: all 0.3s ease-out;
	-ms-transition: all 0.3s ease-out;
	-o-transition: all 0.3s ease-out;
	transition: all 0.3s ease-out;
}
.download-button a:hover{
	color:#d9332d;
	background:#FFF;
}
.testimonials{
	padding:5% 0;
}
.testimonials p{
	color:#787878;
	font-size:30px;
	font-weight: 100;
	line-height: 1.6em;
	width:70%;
	margin:0 auto;
	text-align:center;
}
.testimonials h3{
	font-size:20px;
	color:#E95E5A;
	font-weight:600;
	text-transform:uppercase;
	margin:2.5em 0;
	text-align:center;
}
/*--social--*/

.social {
	display:inline-block;
	margin-left:20px;
	vertical-align:middle;
}
.social a {
	width:25px;
	height:25px;
	display:inline-block;
	background:url(images/social-menu.png) 0 0 no-repeat;
}
.social a.facebook {
	background-position:0 0;
}
.social a.twitter {
	background-position:-29px 0;
}
.social a.pintrest {
	background-position:-59px 0;
}
.social a.instagram {
	background-position:100% 0;
}

.social a.facebook:hover {
	background-position:0 100%;
}
.social a.twitter:hover {
	background-position:-29px 100%;
}
.social a.pintrest:hover {
	background-position:-59px 100%;
}
.social a.instagram:hover {
	background-position:100% 100%;
}

/*--footer--*/
.footer{
	padding:5% 0 0% 0;
}
img.logo-footer {
	display: block;
    margin-left: auto;
    margin-right: auto
}
.footerbottom {
	padding:45px 0 0;
	text-align:center;
}
.footermenu {
	padding-bottom:25px;
}
.footermenu ul {
	list-style:none;
	text-align:center;
	font-size:15px;
}
.footermenu ul li {
	display:inline-block;
	margin:0 18px;
}
.footermenu ul li a {
    line-height: 1.5;
	color:#fff;
}
.footermenu ul li a:hover {
	color:#C10B0B;
}

.footer-top h3{
	color:#FFF;
	font-size:20px;
	font-weight:600;
	text-transform:capitalize;
	margin-bottom:20px;
}
.footer-top p{
	font-size:14px;
	color:#DCDCDC;
	line-height:1.6em;
}
.footer-top p span{
  font-style:italic;	
}
.tweeter-img{
	float:left;
}
.tweeter-img img{
	display:block;
	border:1px solid #FFF;
}
.tweeter-user{
	float:left;
	margin-left:15px;
	margin-top:5px;
}
.tweeter-user p{
	padding:0;
	font-weight:600;
}
.tweeter-user p span{
	font-size:12px;
	font-style:inherit;
	font-weight:normal;
}
.tweeter-desc{
	margin-top:15px;
}
.tweeter-desc a{
	font-weight:600;
	color:#DDD;
	margin-top:15px;
	display:inline-block;
	font-size:14px;
}
.tweeter-desc a:hover{
	text-decoration:underline;
	color:#FFF;
}
.post-desc{
	margin-top:0;
}
.post-img img{
 border:none;	
}
.footer-top li:first-child{
	margin-top:0;
}
.footer-top li{
	margin-top:15px;
}
.copy p{
	color:#2e2e38;
	font-size:0.8em;
	line-height: 1.8em;
}
.copy p a{
	color:#E3530A;
	font-weight:600;
}
.copy p a:hover{
	color:#1E2024;
	text-decoration:underline;
}
 /*** move top **/
#toTop {
	display: none;
	text-decoration: none;
	position: fixed;
	bottom: 0px;
	right: 10px;
	overflow: hidden;
	width:50px;
	height:50px;
	border: none;
	text-indent: 100%;
	background: url(../images/arrow_up.png) no-repeat center;
}
#toTop:active, #toTop:focus {
	outline: none;
}
/*--responsive design--*/
@media (max-width:1366px){
	.wrap{
		width:90%;
	}

}
@media (max-width:1280px){
	.wrap{
		width:90%;
	}
	.content-middle{
		background-size:101%;
		padding:4% 0;
	}
}
@media (max-width:1024px){
	.wrap{
		width:90%;
	}
	.img-banner{
		padding:2em 0;
	}
	.img-banner-info h3{
		font-size:1.714rem;
		margin:40px 0;
	}
	.content-middle h2{
		font-size:2.5em;
	}
	.content-middle p{
		width:100%;
	}
	.download-button{
		margin-top:1em;
	}
	.testimonials p{
		width:100%;
	}
}
@media (max-width:800px){
	.wrap{
		width:90%;
	}
	.cssmenu > ul > li > a{
		padding:12px 8px 12px 8px;
	}
	.logo{
		width:25%;
	}
	.img-banner-info h1{
		font-size:2.2em;
	}
	.img-banner-info h3{
		font-size:1.571rem;
	}
	.features p{
		width:100%;
		font-size: 18px;
	}
	.app-btn a{
		font-size:15px;
		padding:20px 25px 20px 70px;
		background:#282828 url(../images/phone-icon.png) no-repeat 25px 4px;
	}
	.app-btn a:hover{
		background:#FFF url(../images/phone-icon-hover.png) no-repeat 25px 4px;
	}
	.content-middle h2{
		font-size:2em;
	}
	.content-middle p{
		font-size:18px;
	}
	.download-desc{
		width:57%;
	}
	.testimonials p{
		font-size:24px;
	}
	.testimonials h3{
		margin:1.5em 0;
	}
	.dc-head-icon{
		margin-bottom:0;
	}
	.features-list{
		margin-top:0;
	}
	.features h2 {
		font-size: 2.5rem;
	}
}
@media (max-width:720px){
	.wrap{
		width:90%;
	}
	.img-banner{
		margin:1em 0 0 0;
        text-align:center;
	}
	.img-banner-info{
		margin-top:0;
	}
	.img-banner-info h1{
		font-size:2em;
	}
    .img-banner-info h3{
		font-size:1.286rem;
		line-height:1.5em;
		margin:20px 0;
	}
	.features p{
		font-size:16px;
	}
	.content-middle{
		background-size:125%;
	}
	.testimonials p{
		font-size:18px;
	}
	.testimonials h3{
		margin:1em 0;
	}
}
/* ... */

